isp/src/main/java/com/rsupport/example/isp/bad/Ops.kt
package com.rsupport.example.isp.bad

class Ops {
    fun op1(): String {
        return "result of op1"
    }

    fun op2(): String {
        return "result of op2"
    }
}